--- a/tf-records/pyproject.toml
+++ b/tf-records/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tensorflow-records"
-version = "0.1.7"
+version = "0.1.9"
 authors = [
   {name="Marcel Claramunt", email="marcel@moveread.com"}
 ]
 description = "Simple standard + tools for I/O of TFRecords"
 dependencies = [
-  "pydantic", "haskellian", "tensorflow", "tf-tools", "fs-tools"
+  "pydantic", "tensorflow", "tf-tools", "fs-tools"
 ]
 requires-python = ">=3.10"
 readme = {file="README.md", content-type="text/markdown"}
