--- a/tf-serving/pyproject.toml
+++ b/tf-serving/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tf-serving"
-version = "0.1.5"
+version = "0.1.6"
 authors = [
   {name="Marcel Claramunt", email="marcel@moveread.com"}
 ]
@@ -18,8 +18,8 @@ readme = {file="README.md", content-type="text/markdown"}
 [project.urls]
 repo = "https://github.com/marciclabas/tensorflow-ocr.git"
 
-# [project.optional-dependencies]
-# test = [
-#   "pytest < 5.0.0",
-#   "pytest-cov[all]"
-# ]
+[project.optional-dependencies]
+cli = ["typer", "files-dataset", "orjson"]
+
+[project.scripts]
+tfs = "tf.serving.cli:app"
